media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin:10.8.10
          ports:
            - name: http
              containerPort: 8096
            - containerPort: 8920
            - containerPort: 7359
              protocol: UDP
            - containerPort: 1900
              protocol: UDP
          volumeMounts:
            - name: media
              mountPath: /config
              subPath: jellyfin
            - name: media
              mountPath: /data
              subPath: library
      volumes:
        - name: media
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/media
